Miwok: Navigation back button added

--- a/ud839_Miwok-Starter-code/app/src/main/AndroidManifest.xml
+++ b/ud839_Miwok-Starter-code/app/src/main/AndroidManifest.xml
@@ -33,18 +33,31 @@
             android:name=".NumbersActivity"
             android:label="Numbers">
 
+            <meta-data
+                android:name="android.support.PARENT_ACtivity"
+                android:value=".MainActivity"/>
+
         </activity>
         <activity
             android:name=".FamilyMembersActivity"
             android:label="Family Members">
+            <meta-data
+                android:name="android.support.PARENT_ACtivity"
+                android:value=".MainActivity"/>
         </activity>
         <activity
             android:name=".ColorsActivity"
             android:label="Colors">
+            <meta-data
+                android:name="android.support.PARENT_ACtivity"
+                android:value=".MainActivity"/>
         </activity>
         <activity
             android:name=".PhrasesActivity"
             android:label="Phrases">
+            <meta-data
+                android:name="android.support.PARENT_ACtivity"
+                android:value=".MainActivity"/>
         </activity>
     </application>
 
